Fixed menu images not showing

--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -29,7 +29,7 @@
 
 .center_content {
     position: relative;
-    background-color: #dddddd;
+    background-color: #333;
     padding: 5px;
 }
 
