--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -3,16 +3,26 @@
     padding: 20px;
     text-align: left;
     justify-content: space-between;
-    font-size: 146px;
+    font-size: 130px;
     display: flex;
     color: #990000;
 }
 .header .title {
     font-family: Impact, sans-serif;
 }
+
+.header .pfp {
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
+     border-radius: 50%;
+    overflow: hidden;
+    border: 8px solid #008000;
+}
+
 .header img {
-    width: 100px;
-    height: 100px;
+    width: 180px;
+    height: 180px;
     margin-right: 35px;
 }
 
@@ -27,6 +37,15 @@
 .custom-menubar {
     display: flex;
     justify-content: flex-end;
+    text-align: center !important;
+
+}
+.custom-menubar.ui-menubar {
+    text-align: center;
+}
+.custom-menubar .ui-menu-list {
+    width:100%;
+    display:table-row;
 }
 
 .custom-menubar .ui-menuitem-text {
@@ -34,7 +53,11 @@
     color: lightcyan;
     text-decoration: none;
     font-size: 40px;
+    text-align: center !important;
     padding: 10px 20px;
+    position: center;
+    float: none!important;
+    
 }
 
 .custom-menubar .ui-menuitem-text:hover {
